# pim

./: .gitignore  README.md  pyproject.toml
pim/: manage.py
pim/agenda/: views.py
pim/calendar/: models.py
pim/calendar/migrations/: 0001_initial.py  0002_alter_calendar_owner.py
pim/pim/: asgi.py  settings.py  urls.py  wsgi.py
pim/tests/: conftest.py
pim/tests/agenda/: test_models.py  test_views.py
pim/tests/calendar/: test_models.py
