[tool.poetry]
name = "pim"
version = "0.1.0"
description = ""
authors = ["Osvaldo Santana Neto <osantana@osantana.me>"]

[tool.poetry.dependencies]
python = "^3.12"
Django = "*"
psycopg2 = "*"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-django = "*"
pytest-cov = "*"

# tag::pytest-ini-basic[]
[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "pim.settings"
# end::pytest-ini-basic[]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
